Second website of Flowbox.
My second own website.

--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
     homepage</a>
 	</nav>
     <header>
-      <h1>What is your first choice?</h1>
-    </header>
+      <h1>What is your first choice? Welcome to my blockbuster website</h1>
+    </header> 
+	<p>The main page of Faraan Babar</p>
+	<a href = "https://www.youtube.com/@FaraanBabar26"> This is my main youtube page </a>
 	<main>
 		<section>
-<h2>Bot score:
-	Player score:
+<h2>Highest Grossing Rating:
+	Player scoring points:
 </h2>
 		</section>
 
