My last project of Web Development
My education work after 9 years of computer Web Development.

--- a/index.html
+++ b/index.html
@@ -12,12 +12,16 @@
   </head>
 
   <body>
-	<nav>
-<a>href="index.html"
-    homepage</a>
+	<nav class="grid-container">
+<a>Website Homepage
+
+</a>
 	</nav>
-    <header>
-      <h1>What is your first choice? Welcome to my blockbuster website</h1>
+    <header class="grid-container">
+      <h1>What is your first choice? Welcome to my blockbuster website</h1><p>The main page of Faraan Babar
+		<img src="Arrow down fixed symbol 3.png"              class="arrowdown">
+	  </p>
+	  <img src="Youtube banner of 2026.png">
     </header> 
 	<p>The main page of Faraan Babar</p>
 	<a href = "https://www.youtube.com/@FaraanBabar26"> This is my main youtube page </a>
@@ -25,7 +29,9 @@
 		<section>
 <h2>Highest Grossing Rating:
 	Player scoring points:
+<a href = "https://www.youtube.com/@FaraanBabar26"> This is my main youtube page </a>
 </h2>
+
 		</section>
 
 Play our awesome game
